test/fail/duplicate_variable.zn
# ERRORS: 1
func main() {
  var x = 10
  var x = 20
  0
}
